fixed spacing issues

--- a/source/assets/stylesheets/components/_banner-component.scss
+++ b/source/assets/stylesheets/components/_banner-component.scss
@@ -33,21 +33,25 @@ Style for Banner Component
 
 .banner-container {
   padding: 10px;
-
+  border: 1px solid #9b9b9b;
   @media (min-width: $screen-lg) {
-    padding: 50px 100px;
+    padding: 50px 100px 20px;
   }
 }
 
 .banner-container_heading {
   text-align: center;
+  @media (min-width: $screen-lg) {
+    font-size: 60px;
+  }
+  
 }
 
 .banner-container_content {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 50px 0;
+  padding: 55px 0px 20px;
 }
 
 .banner-container_img {
@@ -57,20 +61,29 @@ Style for Banner Component
     width: 100%;
     height: auto;
   }
+
   @media (min-width: $screen-lg) {
     width: 50%;
-    padding: 30px;
+    padding: 0px 30px;
   }
 }
 
 .banner-container_desc {
   width: 100%;
-  padding: 30px 0px;
-
+  padding: 30px 0px 0px;
+  
   @media (min-width: $screen-lg) {
     width: 50%;
-    padding: 30px;
+    padding: 0px 30px 0px;
   }
+   p {
+    font-size: 24px;
+
+    @media (min-width: $screen-lg) { 
+      font-size: 30px;
+    }
+   }
+
 }
 
 .banner-container_btn {
